--- a/BleReaderWebService/Views/Beacon/_Layout.cshtml
+++ b/BleReaderWebService/Views/Beacon/_Layout.cshtml
@@ -35,6 +35,8 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/signalR")
+    <script src="~/signalr/hubs"></script>
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
